--- a/public/css/sass/buttons/_button.scss
+++ b/public/css/sass/buttons/_button.scss
@@ -45,3 +45,15 @@
     }
   }
 }
+
+@media screen and (min-width: 720px) {
+  .ds_wrapper {
+
+    .ds_bttn {
+
+      &.ds_whatsapp {
+        display: none;
+      }
+    }
+  }
+}
